--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@bokuweb/zstd-wasm": "^0.0.21-alpha.5",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@types/wicg-file-system-access": "^2023.10.5",
-    "jimp": "^0.22.12",
-    "lz4js": "^0.2.0"
+    "lz4js": "^0.2.0",
+    "sharp": "^0.33.5"
   }
 }
