--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@types/wicg-file-system-access": "^2023.10.5",
     "lz4js": "^0.2.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "zstd-codec": "^0.1.5",
+    "zstddec": "^0.1.0"
   }
 }
