--- a/package.json
+++ b/package.json
@@ -39,14 +39,11 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@bokuweb/zstd-wasm": "^0.0.21-alpha.5",
-    "@cloudpss/zstd": "^0.3.1",
     "@lunapaint/png-codec": "^0.2.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@types/wicg-file-system-access": "^2023.10.5",
     "lz4js": "^0.2.0",
-    "sharp": "^0.33.5",
-    "zstd-codec": "^0.1.5",
+    "wasmoon-lua5.1": "^1.18.10",
     "zstddec": "^0.1.0"
   }
 }
