--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "arg": "^5.0.2",
     "lz4js": "^0.2.0",
     "pofile": "^1.1.4",
-    "wasmoon-lua5.1": "^1.18.10"
+    "wasmoon-lua5.1": "^1.18.10",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz"
   }
 }
