--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "arg": "^5.0.2",
     "lz4js": "^0.2.0",
+    "node-webpmux": "^3.2.0",
     "pofile": "^1.1.4",
     "wasmoon-lua5.1": "^1.18.10",
     "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
