--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@metastable/cppzst": "^2.1.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
     "arg": "^5.0.2",
+    "luajit-decompiler": "^1.0.1",
     "lz4js": "^0.2.0",
     "node-webpmux": "^3.2.0",
     "pofile": "^1.1.4",
