--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@lunapaint/png-codec": "^0.2.0",
     "@metastable/cppzst": "^2.1.0",
     "@msgpack/msgpack": "^3.0.0-beta2",
+    "@rinsuki/lz4-ts": "^1.0.1",
     "arg": "^5.0.2",
     "luajit-decompiler": "^1.0.3",
-    "lz4js": "^0.2.0",
     "node-webpmux": "^3.2.0",
     "pofile": "^1.1.4",
     "wasmoon-lua5.1": "^1.18.10",
